--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="/main.css" rel="stylesheet">
+    <script src="https://meet.jit.si/external_api.js"></script>
     <title>React App</title>
   </head>
   <body>
